--- a/src/posts/goodbye.mdx
+++ b/src/posts/goodbye.mdx
@@ -1,9 +1,12 @@
----
-title: Goodbye
-date: 2023-03-17
-tags:
-  - engineering
----
+import { OnboardingThumbnail } from "../components/onboarding-thumbnail";
+
+export const Thumbnail = OnboardingThumbnail;
+
+export const metadata = {
+  title: "Goodbye",
+  date: "2023-03-17",
+  tags: ["engineering"],
+};
 
 Goodbye, Next.js!
 
