--- a/src/posts/hello.mdx
+++ b/src/posts/hello.mdx
@@ -1,13 +1,18 @@
----
-title: Hello
-date: 2023-05-17
-tags:
-  - design
----
+import { OnboardingThumbnail } from "../components/onboarding-thumbnail";
+
+export const Thumbnail = OnboardingThumbnail;
+
+export const metadata = {
+  title: "Hello",
+  date: "2023-05-17",
+  tags: ["design"],
+};
 
 # Hello, Next.js!!!
 
 You can import and use React components in MDX files. You can import and use React components in MDX files. You can import and use React components in MDX files. You can import and use React components in MDX files. You can import and use React components in MDX files. You can import and use React components in MDX files. You can import and use React components in MDX files. You can import and use React components in MDX files.
+
+hi
 
 ```
 code
