add resume and page styling

--- a/src/posts/puzzle-onboarding.mdx
+++ b/src/posts/puzzle-onboarding.mdx
@@ -1,8 +1,13 @@
+import { OnboardingThumbnail } from "../components/onboarding-thumbnail";
+
 export const metadata = {
   title: "Onboarding",
   company: "Puzzle",
+  roles: ["Lead engineer"],
   date: "2023-03-17",
   tags: ["engineering"],
 };
+
+<OnboardingThumbnail active className="not-prose" />
 
 Puzzle onboarding
