--- a/src/posts/tr-workout-player.mdx
+++ b/src/posts/tr-workout-player.mdx
@@ -1,8 +1,13 @@
+import { TrWorkoutPlayerThumbnail } from "../components/tr-workout-player-thumbnail";
+
 export const metadata = {
   title: "Workout Player",
   company: "TrainerRoad",
+  roles: ["Lead engineer"],
   date: "2023-03-17",
   tags: ["engineering", "design"],
 };
+
+<TrWorkoutPlayerThumbnail active />
 
 TrainerRoad workoutplayer
