add tr plan builder

--- a/src/posts/puzzle-slack-app.mdx
+++ b/src/posts/puzzle-slack-app.mdx
@@ -5,14 +5,14 @@ export const metadata = {
   title: "Slack App",
   company: "Puzzle",
   roles: ["Lead engineer"],
-  date: "2023-03-17",
+  date: "2023-12-16",
   tags: ["engineering"],
 };
 
 {/* <OnboardingThumbnail active className="not-prose" /> */}
 
 <ThumbnailContainer>
-  <PuzzleSlackAppThumbnail />
+  <PuzzleSlackAppThumbnail active />
 </ThumbnailContainer>
 
 Slack App
