--- a/src/posts/tr-workout-player.mdx
+++ b/src/posts/tr-workout-player.mdx
@@ -1,13 +1,14 @@
-import { TrWorkoutPlayerThumbnail } from "../components/tr-workout-player-thumbnail";
+import { TrWorkoutPlayerThumbnail } from "../components/thumbnails/tr-workout-player-thumbnail";
+import { ThumbnailContainer } from "../components/thumbnails/thumbnail-container";
 
 export const metadata = {
   title: "Workout Player",
   company: "TrainerRoad",
   roles: ["Lead engineer"],
-  date: "2023-03-17",
+  date: "2023-12-12",
   tags: ["engineering", "design"],
 };
 
-<TrWorkoutPlayerThumbnail active />
+<TrWorkoutPlayerThumbnail active fullscreen />
 
 TrainerRoad workoutplayer
