--- a/src/posts/puzzle-onboarding.mdx
+++ b/src/posts/puzzle-onboarding.mdx
@@ -1,4 +1,4 @@
-import { OnboardingThumbnail } from "../components/onboarding-thumbnail";
+import { PuzzleOnboardingThumbnail } from "../components/thumbnails/puzzle-onboarding-thumbnail";
 
 export const metadata = {
   title: "Onboarding",
@@ -8,6 +8,6 @@ export const metadata = {
   tags: ["engineering"],
 };
 
-<OnboardingThumbnail active className="not-prose" />
+<PuzzleOnboardingThumbnail active className="not-prose" />
 
 Puzzle onboarding
