--- a/src/posts/puzzle-slack-app.mdx
+++ b/src/posts/puzzle-slack-app.mdx
@@ -12,7 +12,7 @@ export const metadata = {
 {/* <OnboardingThumbnail active className="not-prose" /> */}
 
 <ThumbnailContainer>
-  <PuzzleSlackAppThumbnail active />
+  <PuzzleSlackAppThumbnail active fullscreen />
 </ThumbnailContainer>
 
 Slack App
