--- a/src/posts/wish-wholesale.mdx
+++ b/src/posts/wish-wholesale.mdx
@@ -1,13 +1,16 @@
-import { TrWorkoutPlayerThumbnail } from "../components/tr-workout-player-thumbnail";
+import { WishWholesaleThumbnail } from "../components/thumbnails/wish-wholesale-thumbnail";
+import { ThumbnailContainer } from "../components/thumbnails/thumbnail-container";
 
 export const metadata = {
   title: "Wish Wholesale",
   company: "Wish",
-  roles: ["Engineer", "Designer"],
+  roles: ["Lead frontend engineer", "Lead designer"],
   date: "2023-12-14",
   tags: ["engineering", "design"],
 };
 
-<TrWorkoutPlayerThumbnail active />
+<ThumbnailContainer>
+  <WishWholesaleThumbnail active fullscreen />
+</ThumbnailContainer>
 
-Wish Wholesale
+Slack App
