--- a/src/posts/puzzle-onboarding.mdx
+++ b/src/posts/puzzle-onboarding.mdx
@@ -8,6 +8,6 @@ export const metadata = {
   tags: ["engineering"],
 };
 
-<PuzzleOnboardingThumbnail active className="not-prose" />
+<PuzzleOnboardingThumbnail active fullscreen className="not-prose" />
 
 Puzzle onboarding
