add company summary

--- a/src/posts/puzzle-onboarding.mdx
+++ b/src/posts/puzzle-onboarding.mdx
@@ -1,4 +1,5 @@
 import { PuzzleOnboardingThumbnail } from "../components/thumbnails/puzzle-onboarding-thumbnail";
+import { PuzzleSummary } from "../components/company-summaries/puzzle-summary";
 
 export const metadata = {
   title: "Onboarding",
@@ -10,4 +11,6 @@ export const metadata = {
 
 <PuzzleOnboardingThumbnail active fullscreen className="not-prose" />
 
-Puzzle onboarding
+<PuzzleSummary />
+
+Our team rebuilt the onboarding flow at [Puzzle](https://puzzle.io). Previously, the onboarding flow was consisted only of three steps: company information, integrations and review.
