--- a/src/posts/puzzle-stripe-app.mdx
+++ b/src/posts/puzzle-stripe-app.mdx
@@ -1,5 +1,6 @@
 import { ThumbnailContainer } from "../components/thumbnails/thumbnail-container";
 import { PuzzleStripeAppThumbnail } from "../components/thumbnails/puzzle-stripe-app-thumbnail";
+import { PuzzleSummary } from "../components/company-summaries/puzzle-summary";
 
 export const metadata = {
   title: "Stripe App",
@@ -12,5 +13,7 @@ export const metadata = {
 <ThumbnailContainer noBackground>
   <PuzzleStripeAppThumbnail active />
 </ThumbnailContainer>
+
+<PuzzleSummary />
 
 Stripe app
