--- a/src/posts/puzzle-onboarding.mdx
+++ b/src/posts/puzzle-onboarding.mdx
@@ -13,4 +13,4 @@ export const metadata = {
 
 <PuzzleSummary />
 
-Our team rebuilt the onboarding flow at [Puzzle](https://puzzle.io). Previously, the onboarding flow was consisted only of three steps: company information, integrations and review.
+Our team rebuilt the onboarding flow at [Puzzle](https://puzzle.io). Previously, the onboarding flow was consisted only of three steps: company information, integrations and review. As the number of supported integrations grew, we wanted to break it out into multiple steps. We ended up with a total refresh of the original onboarding flow.
