--- a/src/posts/puzzle-slack-app.mdx
+++ b/src/posts/puzzle-slack-app.mdx
@@ -3,7 +3,7 @@ import { ThumbnailContainer } from "../components/thumbnails/thumbnail-container
 import { PuzzleSummary } from "../components/company-summaries/puzzle-summary";
 
 export const metadata = {
-  title: "Slack App",
+  title: "Puzzle Slack App",
   company: "Puzzle",
   roles: ["Lead engineer"],
   date: "2023-12-16",
