--- a/src/posts/puzzle-stripe-app.mdx
+++ b/src/posts/puzzle-stripe-app.mdx
@@ -3,7 +3,7 @@ import { PuzzleStripeAppThumbnail } from "../components/thumbnails/puzzle-stripe
 import { PuzzleSummary } from "../components/company-summaries/puzzle-summary";
 
 export const metadata = {
-  title: "Stripe App",
+  title: "Puzzle Stripe App",
   company: "Puzzle",
   roles: ["Lead engineer"],
   date: "2023-12-15",
@@ -16,4 +16,8 @@ export const metadata = {
 
 <PuzzleSummary />
 
-Stripe app
+The Puzzle Slack app was the first big project I worked on at Puzzle. It was the most critical priority at the time as we landed an opportunity to be part of Stripe's initial release of their [App Marketplace](https://marketplace.stripe.com/) fairly late. According to them, we were the last company to be invited. This was a huge opportunity as we could funnel users from Stripe to Puzzle.
+
+I led the project on the engineering side and set up internal deadlines to ensure our app gets approved for their marketplace announcement. The approval process was the bottleneck, and we had no control over it so it was important that we were prepared way in advance. Our app was approved a week before their announcement, and we successfully launched the Puzzle Stripe app!
+
+![Puzzle stripe app screenshot](/puzzle-stripe-app/screenshot-1.png)
