--- a/src/posts/tr-plan-builder.mdx
+++ b/src/posts/tr-plan-builder.mdx
@@ -1,5 +1,6 @@
 import { TrPlanBuilderThumbnail } from "../components/thumbnails/tr-plan-builder-thumbnail";
 import { ThumbnailContainer } from "../components/thumbnails/thumbnail-container";
+import { TrSummary } from "../components/company-summaries/tr-summary";
 
 export const metadata = {
   title: "Plan Builder",
@@ -13,4 +14,10 @@ export const metadata = {
   <TrPlanBuilderThumbnail active fullscreen />
 </ThumbnailContainer>
 
-TrainerRoad plan builder
+<TrSummary />
+
+TrainerRoad is for serious athletes. Still, the strength and endurance differences between individuals are huge. Their goals are also different. Are they optimizing their training plans for long or short distance? Cross country? Or a specific event? The list goes on. We built the Plan Builder feature so that we can provide a personalized training plan for their goals. I implemented the feature on React Native.
+
+<video width="320" height="240" controls className="mx-auto">
+  <source src="/tr-plan-builder/tr-plan-builder.mov" type="video/mp4" />
+</video>
